--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -6,7 +6,7 @@
 
 .portfolio__item {
         background: var(--color-bg-variant);
-        padding: 1.3rem;
+        padding: 0.5rem;
         border-radius: 2rem;
         border: 1px solid transparent;
         transition: var(--transition);
@@ -23,13 +23,15 @@
 }
 
 .portfolio__item h3 {
- margin: 1.2rem 0 2rem;
+ margin: 0.5rem 0.5rem;
+ color: var(--color-ligth);
+ font-size: 1rem;
 }
 
 .portfolio__item-cta {
     display: flex;
     gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 /*---MEDIA QUERIES (MEDIUM DEVICES)---*/
